# email

./: .dockerignore  .env  CLAUDE-3.md  CLAUDE.md  Cargo.toml  Dockerfile  api.http  configuration.yaml  spec.yaml  sqlx-data.json
chapter-summary/: CLAUDE-4.md
configuration/: base.yaml  local.yaml  production.yaml
docs/: Rust命令行开发指南.md  Rust学习指南_Node开发者版.md  cargo-features.md  cargo-test-output.md  database-migrations.md  docker-container-commands.md  docker命令行.md  postgresql_setup_guide.md  rust-borrowing-system.md  rust-double-colon-vs-dot.md  rust-embedded-learning-path.md  rust-impl-trait-explanation.md  rust-lib-rs-explanation.md  rust-logging-system.md  rust-string-str-conversion.md  rust-tryfrom-trait.md  sqlx-offline-mode.md  terminal-history-search.md  toml-table-syntax.md  依赖库说明.md  文档驱动开发模式.md
migrations/: 20260204070514_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  rust-module-export-pattern.md  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs
