[package]
name = "email"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email"

[dependencies]
config = "0.13"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
[dependencies.sqlx]
version = "0.6"
features = ["runtime-actix-rustls", "postgres", "macros","uuid","chrono","migrate"]

[dev-dependencies]
reqwest = "0.11"
