[package]
name = "email"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email"

[dependencies]
config = "0.13"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.15"
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = ["env-filter","registry"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = {version = "0.8", features = ["serde"]}
tracing-actix-web = "0.6"
[dependencies.sqlx]
version = "0.6"
features = ["runtime-actix-rustls", "postgres", "macros","uuid","chrono","migrate"]

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
