[package]
name = "email"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email"

[dependencies]
config = "0.13"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.15"
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = ["env-filter","registry"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = {version = "0.8", features = ["serde"]}
tracing-actix-web = "0.6"
serde-aux= "3"
unicode-segmentation = "1.12.0"
claim = "0.5"
validator = "0.14"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
]}
[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["runtime-actix-rustls", "postgres", "macros","uuid","chrono","migrate","offline"]
[dev-dependencies]
once_cell = "1"
rand = "0.9.2"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.5"
serde_json = "1.0.0"